@@ -19,9 +19,8 @@ import io.cucumber.java.en.When;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import net.serenitybdd.annotations.Steps;
 import net.serenitybdd.core.Serenity;
-import net.thucydides.core.annotations.Steps;
 import org.junit.Assert;
 
 public class ItemStepDefinitions {
@@ -120,7 +119,7 @@ public class ItemStepDefinitions {
         actualMenu.getCategories().stream()
             .filter(cat -> cat.getId().equals(categoryId))
             .flatMap(category -> category.getItems().stream())
-            .collect(Collectors.toList());
+            .toList();
 
     Assert.assertTrue(actualItems.contains(expectedItem));
   }
